Footer major fixes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <footer>
         <div class="container-foot">
             <div class="row">
-                <div class="col-foot">
+                <div class="col-foot-left">
                     <div class="content-foot-col">
                         <img src="./img/sinister.jpeg" alt="Sinister">
                     </div>
@@ -188,23 +188,30 @@
                         <i class="fa-regular fa-folder"></i>
                     </div>
                 </div>
-                <div class="col-foot">
-                    <div class="content-foot-row">
-                        <div><i class="fa-solid fa-shuffle"></i></div>
-                        <div><i class="fa-solid fa-backward-step"></i>
-                        </div>
-                        <div><i class="fa-regular fa-circle-play fa-2x"></i></div>
-                        <div><i class="fa-solid fa-forward-step"></i>
-                        </div>
-                        <div><i class="fa-solid fa-rotate-right"></i>
-                        </div> 
+                <div class="col-foot-center">
+                    <div class="content-foot-row-center">
+                        <ul>
+                            <li><i class="fa-solid fa-shuffle fa-2x"></i></li>
+                            <li><i class="fa-solid fa-backward-step fa-2x"></i></li>
+                            <li><i class="fa-regular fa-circle-play fa-3x"></i></li>
+                            <li><i class="fa-solid fa-forward-step fa-2x"></i></li>
+                            <li><i class="fa-solid fa-rotate-right fa-2x"></i></li>
+                        </ul> 
+                    </div>
+                    <div class="content-foot-row-center">
+                        <div class="time"><strong>0:25</strong></div>
+                        <hr class="hr-grey-3">
+                        <hr class="hr-grey-4">
+                        <div class="time"><strong>4:35</strong></div>
                     </div>
                 </div>
-                <div class="col-foot">
+                <div class="col-foot-right">
                     <div class="content-foot-row">
-                        <i class="fa-solid fa-bars"></i>
-                        <i class="fa-solid fa-display"></i>
-                        <i class="fa-solid fa-volume-high"></i>
+                        <ul>
+                            <li><i class="fa-solid fa-bars"></i></li>
+                            <li><i class="fa-solid fa-display"></i></li>
+                            <li><i class="fa-solid fa-volume-high"></i></li>
+                        </ul>
                     </div>
                     <hr class="hr-grey-1">
                     <hr class="hr-grey-2">
