Layout small completed

--- a/index.html
+++ b/index.html
@@ -29,23 +29,38 @@
                 <div class="col-side">
                     <div class="content-side">
                         <img class="icon-1" src="./img/logo-small.svg" alt="Spotify Logo">
+                        <img class="icon-logo" src="./img/logo.svg" alt="Spotify Logo">
+                    </div>
+                    <hr class="hr-g-2">
+                    <div class="content-side">
+                        <img class="icon-2" src="./img/home.svg" alt="Spotify Home"><span class="menu-text"><strong>Home</strong></span>
                     </div>
                     <div class="content-side">
-                        <img class="icon-2" src="./img/home.svg" alt="Spotify Home">
+                        <img class="icon-2" src="./img/search.svg" alt="Spotify Search"><span class="menu-text-grey"><strong>Cerca</strong></span>
                     </div>
                     <div class="content-side">
-                        <img class="icon-2" src="./img/search.svg" alt="Spotify Search">
+                        <img class="icon-2" src="./img/libreria.svg" alt="Spotify Library"><span class="menu-text-grey"><strong>La tua libreria</strong></span>
                     </div>
                     <div class="content-side">
-                        <img class="icon-2" src="./img/libreria.svg" alt="Spotify Library">
+                        <p class="menu-text font-size-12"><strong>PLAYLIST</strong></p>
+                    </div>
+                    <div class="content-side">
+                        <i class="fa-solid fa-plus"></i><span class="menu-text-grey"><strong>Crea Playlist</strong></span>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
+                        <div class="menu-text-grey-2"><strong>Nome Playlist</strong></div>
                     </div>
                 </div>
                 <div class="col-side-2">
                     <div class="content-side">
-                        <img class="icon-3" src="./img/download.svg" alt="Spotify Download">
+                        <img class="icon-3" src="./img/download.svg" alt="Spotify Download"><span class="menu-text-grey"><strong>Installa App</strong></span>
                     </div>
+                    <hr class="hr-side">
                     <div class="content-side">
-                        <img class="icon-2 bg-grey radius-20" src="./img/profile.svg" alt="Spotify Profile">
+                        <img class="icon-2 bg-grey radius-20" src="./img/profile.svg" alt="Spotify Profile"><span class="menu-text font-size-12"><strong>JOHN DOE</strong></span>
                     </div>
                 </div>
             </div>
