Layout md completed

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <div class="color-grey font-size-11">Brano</div>
                         <div class="color-grey font-size-11">Nome</div>
                     </div>
-                    <div class="content-foot-col">
+                    <div class="content-foot-col-3">
                         <i class="fa-regular fa-heart"></i>
                         <i class="fa-regular fa-folder"></i>
                     </div>
