--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/metal_lifting.jpg" alt="Metal">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>Heavy Metal</h4>
                     <h6>Subtitle</h6>
@@ -102,6 +103,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/stranger.jpeg" alt="Stranger Things">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
                     <h6>Kyle Dixon & Michael Stein</h6>
@@ -109,6 +111,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/aquietplace.jpeg" alt="A quiet place">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>A Quiet Place</h4>
                     <h6>Subtitle</h6>
@@ -116,6 +119,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/split.jpeg" alt="Split">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>Split</h4>
                     <h6>Subtitle</h6>
@@ -123,6 +127,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/cure.jpeg" alt="Cure for wellness">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>A Cure for Wellness</h4>
                     <h6>Subtitle</h6>
@@ -130,6 +135,7 @@
                 <div class="col-main">
                     <div class="content-main">
                         <img src="./img/sinister.jpeg" alt="Sinister">
+                        <div class="play"><i class="fa-regular fa-circle-play fa-4x"></i></div>
                     </div>
                     <h4>Sinister</h4>
                     <h6>Subtitle</h6>
